@@ -113,6 +113,7 @@ diff_command diff -U 5
 use_magic_file false
 
 fuzzy_file_find true
+# fuzzy_file_find.recursive true
 fuzzy_file_find.max_files 8192
 # Fuzzy file finder ignores.  Uses glob syntax, as per File.fnmatch
 #   http://www.ruby-doc.org/core/classes/File.html#M000001
