@@ -104,6 +104,7 @@ module Diakonos
       @setting_strings = Hash.new
       # Setup some defaults
       @settings[ "context.format" ] = Curses::A_REVERSE
+      @settings['fuzzy_file_find.recursive'] = true
 
       @modes[ 'edit' ].keymap[ Curses::KEY_RESIZE ] = [ "redraw", nil ]
       @modes[ 'edit' ].keymap[ RESIZE2 ] = [ "redraw", nil ]
@@ -338,7 +339,7 @@ module Diakonos
             /^lang\.(.+?)\.indent\.(?:auto|roundup|using_tabs|closers)$/,
             "found_cursor_start", "convert_tabs", 'delete_newline_on_delete_to_eol',
             'suppress_welcome', 'strip_trailing_whitespace_on_save',
-            'find.return_on_abort', 'fuzzy_file_find', 'view.line_numbers',
+            'find.return_on_abort', 'fuzzy_file_find', 'fuzzy_file_find.recursive', 'view.line_numbers',
             'find.show_context_after', 'view.pairs.highlight', 'open_as_first_buffer'
           @settings[ command ] = arg.to_b
         when "context.format", "context.separator.format", "status.format", 'view.line_numbers.format',
